# cpp_trainigs

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  release.yml
include/: arrays.h  math.h  menu.h
src/: arrays.cpp  main.cpp  menu.cpp
utils/: constants.h  reader.cpp  reader.h
